@@ -17,6 +17,9 @@ bzr-svn 0.4.9	UNRELEASED
 
    * Avoid using copy in several places.
 
+   * Branching from a Subversion repository will now fetch right-hand side 
+     parents as well as left hand side (mainline) parents, if present.
+
   BUGS
   
    * Fix compatibility with bzr 1.3.
